# weftos

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  weave.toml
.claude/skills/weftos-build-deploy/: SKILL.md
.clawft/: config.json
.github/workflows/: docs-assets.yml  pr-gates.yml  publish-crates.yml  release-wasi.yml  wasm-browser.yml
.planning/development_notes/: adaptive-hnsw-tiered-search.md  closure-sdk-integration.md  coherence-lattice-alpha-integration.md  eml-causal-collapse-research.md  eml_model_development.md  eml_model_development_assessment.md  exochain-governance-audit.md  feature-request-whitelabel.md  knowledge-graph-paper-survey-phase2.md  mesh-time-sync.md  nvidia-quantum-integration.md  pasqal-integration.md  sprint-17-tasklist.md
.planning/development_notes/sprint-16/: browser-wasm-features.md  mesh-k6-transport.md  playground-phase34.md  security-audit.md  serviceapi-wasip2.md  vector-hybrid.md  wasmtime-upgrade.md
.planning/graphify-rs/: phase1a-notes.md  phase3-notes.md  phase45-notes.md
.planning/sonobuoy/: GAPS.md  RANGING.md  README.md  SYNTHESIS.md  k-stemit-sonobuoy-mapping.md
.planning/sonobuoy/papers/: k-stemit.md  survey.md
.planning/sparc/weftos/: 00-orchestrator.md  01-phase-K0-kernel-foundation.md  02-phase-K1-supervisor-rbac.md  03-phase-K2-a2a-ipc.md  03b-phase-K2-hardening.md  04-phase-K3-wasm-sandbox.md  05-phase-K4-containers.md  06-phase-K5-app-framework.md  07-phase-K6-mesh-framework.md  07-ruvector-deep-integration.md  08-os-gap-filling.md  13-exo-resource-tree.md
.weftos/: SESSION_HANDOFF.md
.weftos/analysis/: gap-report.json
.weftos/graph/: decisions.json  git-history.json  module-deps.json
crates/clawft-cli/: Cargo.toml
crates/clawft-cli/src/: main.rs
crates/clawft-core/: Cargo.toml
crates/clawft-edge-bench/: Cargo.toml  sdkconfig.defaults
crates/clawft-graphify/: Cargo.toml
crates/clawft-kernel/: Cargo.toml
crates/clawft-kernel/src/: a2a.rs  agent_loop.rs  app.rs  assessment.rs  auth_service.rs  boot.rs  calibration.rs  capability.rs  chain.rs  cluster.rs  cognitive_tick.rs  config.rs  config_service.rs  console.rs  container.rs  cron.rs  democritus.rs  eml_coherence.rs  eml_kernel.rs  eml_persistence.rs  environment.rs  error.rs  gate.rs  governance.rs  health.rs  hnsw_eml.rs  hnsw_service.rs  ipc.rs  lib.rs  mesh_assess.rs  mesh_framing.rs  mesh_heartbeat.rs  mesh_listener.rs  mesh_runtime.rs  process.rs  quantum_backend.rs  quantum_braket.rs  quantum_pasqal.rs  quantum_register.rs  service.rs  (+10 more)
crates/clawft-kernel/src/assessment/: analyzer.rs  analyzers.rs  mod.rs
crates/clawft-kernel/src/assessment/analyzers/: complexity.rs  data_source.rs  dependency.rs  security.rs  topology.rs
crates/clawft-kernel/src/wasm_runner/: runner.rs  tools_fs.rs  tools_sys.rs
crates/clawft-kernel/tests/: e2e_integration.rs  feature_composition.rs  pasqal_live.rs
crates/clawft-kernel/tests/snapshots/: golden_snapshots__config_snapshots__default_config.snap
crates/clawft-llm/: Cargo.toml
crates/clawft-platform/: Cargo.toml
crates/clawft-plugin/: Cargo.toml
crates/clawft-rpc/: Cargo.toml
crates/clawft-services/: Cargo.toml
crates/clawft-types/: Cargo.toml
crates/clawft-wasm/: Cargo.toml
crates/clawft-weave/: Cargo.toml
crates/clawft-weave/src/: client.rs  daemon.rs  main.rs  protocol.rs
crates/clawft-weave/src/commands/: agent_cmd.rs  bench_cmd.rs  chain_cmd.rs  graphify_cmd.rs  init_cmd.rs  kernel_cmd.rs  leaf_cmd.rs  mod.rs  resource_cmd.rs  topology_cmd.rs
crates/eml-core/: Cargo.toml
crates/exo-resource-tree/: Cargo.toml
crates/weftos/: Cargo.toml
docs/adr/: adr-020-kernel-phase-responsibilities.md  adr-021-cli-kernel-compliance.md  adr-022-exochain-mandatory-audit.md  adr-023-assessment-as-kernel-service.md
docs/guides/: weftos-manual-testing.md
docs/src/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
gui/: package-lock.json  package.json
gui/src/: App.tsx  index.css  main.tsx
gui/src-tauri/: Cargo.toml
scripts/: build-wasi.sh  build.sh  install.sh
scripts/bench/: wasm-size.sh
tests/fixtures/: config.json
ui/: package-lock.json
(+1851 files in other folders)
