[package]
name = "clawft-kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WeftOS kernel: boot sequence, process table, service registry, and health subsystem"
keywords = ["kernel", "os", "process", "service", "health"]
categories = ["development-tools"]

[features]
default = ["native"]
native = [
    "dep:tokio",
    "dep:tokio-util",
    "clawft-core/native",
    "clawft-platform/native",
    "clawft-types/native",
]
wasm-sandbox = []
containers = []

[dependencies]
clawft-core = { workspace = true, default-features = false }
clawft-types = { workspace = true, default-features = false }
clawft-platform = { workspace = true, default-features = false }
clawft-plugin = { workspace = true, default-features = false }
dashmap = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
clawft-platform = { workspace = true }
clawft-types = { workspace = true }
